[gd_scene load_steps=6 format=3 uid="uid://cww4j7a7vwmk5"]

[ext_resource type="PackedScene" uid="uid://c8s7fsn56b230" path="res://Scenes/Components/hitbox_component.tscn" id="1_6hdss"]
[ext_resource type="Script" path="res://Scenes/Enemies/Attacks/spore_cloud.gd" id="2_d5s16"]
[ext_resource type="Texture2D" uid="uid://d3qur0o3cc84e" path="res://Assets/Particles/dust_cloud.png" id="3_8tacg"]

[sub_resource type="Curve" id="Curve_g215g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.124555, 1), 0.0, 0.0, 0, 0, Vector2(0.35, 0.38), -2.94549, -2.94549, 0, 0, Vector2(0.55, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6m5do"]
radius = 9.0
height = 22.0

[node name="SporeCloud" instance=ExtResource("1_6hdss")]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(1.5, 1.5)
script = ExtResource("2_d5s16")
movement_curve = SubResource("Curve_g215g")
damage = 5

[node name="Sprite" type="Sprite2D" parent="." index="0"]
modulate = Color(0, 1, 0, 1)
texture = ExtResource("3_8tacg")

[node name="CollisionShape" type="CollisionShape2D" parent="." index="1"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6m5do")

[node name="LifetimeTimer" type="Timer" parent="." index="2"]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
